--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,5 @@ before_install:
   - npm install
 
 script:
-  - node_modules\.bin\jshint
-  - node_modules\.bin\twly
+  - node_modules/.bin/jshint
+  - node_modules/.bin\twly
