--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,9 @@ cache: npm
 before_install:
 - npm install
 script:
-- node_modules/.bin/jshint
+- node_modules/.bin/jshint src/
 - node_modules/.bin/twly
+- node_modules/.bin/retire
 deploy:
   provider: heroku
   api_key:
